[package]
name = "e-z-uploader"
version = "2.0.1"
description = "E-Z screenshot uploader"
authors = ["imyanice"]
license = "GPL-v3"
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = [ "http-request", "fs-read-file", "protocol-asset", "notification", "shell-open", "system-tray", "dialog"] }
notify = "6.1.1"
dirs = "4.0.0"
arboard = "2.1.1"
image = "0.24.3"
reqwest = {version = "0.11.11", features = ["multipart", "blocking", "json"] }
rodio = "0.15.0"
confy = "0.5.0"
fs_extra = "1.3.0"
home = "0.5.9"
sentry = { version =  "0.32.2", features = ["debug-images"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Strip unneeded stuff

